# nanocli

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  deployed.json  package-lock.json  package.json
cli/: pyproject.toml
cli/nanocli/: __init__.py  abi.py  blockchain.py  cli.py  config.py  monitor.py
cli/tests/: test_blockchain.py
contracts/: .eslintrc.cjs  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: BatchPayment.sol  NanoUSDC.sol
contracts/deploy/: 00_batchPayment.ts  01_nanoUsdc.ts
contracts/test/: BatchPayment.ts
frontend/: .eslintrc.json  .gitignore  jest.setup.ts  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/__tests__/: BatchTransfer.test.tsx  page.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/contract-artifact/: route.ts
frontend/app/api/deployed/: route.ts
frontend/app/deploy/: page.tsx
frontend/components/: AgentBanner.tsx  Balance.tsx  BatchForm.tsx  BatchTransfer.tsx  ConnectButton.tsx  ContractCard.tsx  DesktopIcons.tsx  DesktopWindow.tsx  Features.tsx  GradientBackground.tsx  Header.tsx  NetworkBadge.tsx  Taskbar.tsx
frontend/config/: abi.ts  wagmi.ts
